base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: hello
        image: hello:1.0.0
        ports:
        - containerPort: 1970
        livenessProbe:
          httpGet:
            path: /health
            port: 1970
