base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello
  name: hello
spec:
  port:
    targetPort: 1970
  to:
    kind: Service
    name: hello
    weight: 100
  wildcardPolicy: None
